--- a/hsk3.html
+++ b/hsk3.html
@@ -2,8 +2,10 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HSK3</title>
 <link rel="stylesheet" href="CSS/styles.css">
+<link rel="stylesheet" href="CSS/responsive.css">
 </head>
 
 <body>
