--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HSK4</title>
 <link rel="stylesheet" href="CSS/styles.css">
+<link rel="stylesheet" href="CSS/responsive.css">
 </head>
 
 <body>
 <div class="header">
 <h2>HSK Vocabulary Quiz HSK4</h2>
-<button class="btn-chuyen"><a href="index.html">Chuyển qua HSK3</a></button>
+<button class="btn-chuyen"><a href="index.html" class="btn-chuyen-text">Chuyển qua HSK3</a></button>
 </div>
 <div class="duong-ke"></div>
 <div class="quiz-wrap">
