--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="header">
 <h2>HSK Vocabulary Quiz HSK4</h2>
-<button class="btn-chuyen"><a href="index.html" class="btn-chuyen-text">Chuyển qua HSK3</a></button>
+<button class="btn-chuyen"><a href="hsk3.html" class="btn-chuyen-text">Chuyển qua HSK3</a></button>
 </div>
 <div class="duong-ke"></div>
 <div class="quiz-wrap">
