Them hsk4 quyen 2

--- a/hsk3.html
+++ b/hsk3.html
@@ -11,7 +11,11 @@
 <body>
 <div class="header">
 <h2>HSK Vocabulary Quiz HSK3</h2>
-<button class="btn-chuyen"><a href="index.html">Chuyển qua HSK4</a></button>
+<div>
+<button class="btn-chuyen"><a href="hsk3.html" class="btn-chuyen-text">Chuyển qua HSK3</a></button>
+<button class="btn-chuyen"><a href="index.html" class="btn-chuyen-text">Chuyển qua HSK4 quyển 1</a></button>
+<button class="btn-chuyen"><a href="hsk4quyen2.html" class="btn-chuyen-text">Chuyển qua HSK4 quyển 2</a></button>
+</div>
 </div>
 <div class="duong-ke"></div>
 
