--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 
 <body>
 <div class="header">
-<h2>HSK Vocabulary Quiz HSK4</h2>
+<h2>HSK Vocabulary Quiz HSK4 Quyển 1</h2>
+<div>
 <button class="btn-chuyen"><a href="hsk3.html" class="btn-chuyen-text">Chuyển qua HSK3</a></button>
+<button class="btn-chuyen"><a href="index.html" class="btn-chuyen-text">Chuyển qua HSK4 quyển 1</a></button>
+<button class="btn-chuyen"><a href="hsk4quyen2.html" class="btn-chuyen-text">Chuyển qua HSK4 quyển 2</a></button>
+</div>
 </div>
 <div class="duong-ke"></div>
 <div class="quiz-wrap">
